set error payload
