# sesi2/latihan1/params/views/base.go
@@ -5,3 +5,10 @@ type GeneralSuccessPayload struct {
 	Message string      `json:"message"`
 	Payload interface{} `json:"payload"`
 }
+
+type GeneralErrorPayload struct {
+	Status         int         `json:"status"`
+	Message        string      `json:"message"`
+	Error          string      `json:"error"`
+	AdditionalInfo interface{} `json:"additional_info"`
+}
